# pyapisports

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: release.yaml  unit-tests.yaml
src/pyapisports/: __init__.py  client.py  exceptions.py
src/pyapisports/football/: __init__.py
src/pyapisports/football/models/: __init__.py  country.py  coverage.py  standings.py  status.py  team_statistics.py  teams.py  timezone.py  venues.py
src/pyapisports/football/models/fixtures/: __init__.py  fixtures.py  headtohead.py  rounds.py  statistics.py
src/pyapisports/football/models/teams/: __init__.py  countries.py  info.py  seasons.py  statistics.py
src/pyapisports/football/resources/: base.py  football.py
src/pyapisports/models/: __init__.py  base.py  country.py  coverage.py  fixtures.py  leagues.py  seasons.py  teams.py  venues.py
src/pyapisports/resources/: __init__.py  base.py  football.py
tests/: conftest.py  test_base.py  test_client.py  test_countries.py  test_country.py  test_coverage.py  test_fixture_statistics.py  test_fixtures.py  test_football_resource.py  test_headtohead.py  test_leagues.py  test_rounds.py  test_seasons.py  test_standings.py  test_status.py  test_team_seasons.py  test_team_statistics.py  test_teams.py  test_timezone.py  test_venues.py
